--- a/src/data/config/config.json
+++ b/src/data/config/config.json
@@ -1,5 +1,5 @@
 {
-  "____MODULES____": "__Assign the modules here...",
+  "____MODULES____": "__Assign preset modules here...",
   "$ShellTemplate": "shell.hybrid.html",
   "$Preheader": "modules/preheader.html",
   "$ContainerOpen": "partials/container-open.html",
@@ -7,7 +7,7 @@
   "$Header": "modules/header.html",
   "$Logo": "modules/logo.html",
   "$Hero": "modules/hero.html",
-  "____SETTINGS____": "__Assign the settings here...",
+  "____SETTINGS____": "__Assign preset campaign settings here...",
   "$category": "green",
   "____ATTRIBUTES____": "__Assign html attributes here. N.B. these may be things that for the optimum rendering of email template need to be defined as attributes as well as css",
   "globalWidth": "600",
